rook/dashboard-ingress-http.yaml
#
# This example is for Kubernetes running an ngnix-ingress
# and an ACME (e.g. Let's Encrypt) certificate service
#
# The nginx-ingress annotations support the dashboard
# running using HTTPS with a self-signed certificate
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph # namespace:cluster
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - test1.k8s.eecs.net
     secretName: k8s.eecs.net
  rules:
  - host: test1.k8s.eecs.net
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: http-dashboard
